# crypto-exchange

./: .dockerignore  .gitignore  pyproject.toml
src/: manage.py  tonconnect-manifest.json
src/accounts/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py
src/accounts/services/: emails.py
src/common/: mixins.py
src/config/: settings.py  urls.py
src/config/settings/: base.py  dev.py  prod.py  stage.py
src/core/: urls.py  views.py
src/core/utils/: captcha.py
src/exchange/: admin.py  models.py  urls.py  views.py
src/exchange/migrations/: 0001_initial.py  0002_exchangeorder.py  0003_alter_exchangeorder_options_and_more.py
src/static/css/: animate.css  flash-messages.css  style.css  style.min.css
src/static/js/: FlashMessage.js  captcha.js  modal-ajax.js
src/static/js/exchange/: coin-display.js  exchange-calculator.js  order-form.js
src/static/js/wallet-manager/: ton-wallet.js
src/templates/: index.html
src/templates/accounts/: sign-in.html  sign-up.html
src/templates/core/: aml.html  cashback-info.html  deposit.html  index.html  raffle.html
src/templates/emails/: registration_email.html
src/templates/exchange/: order_success.html
src/templates/partials/: base.html  footer.html  header.html
