[tool.poetry]
name = "crypto-exchange"
version = "0.1.0"
description = ""
authors = ["sauberr <sauberr10@gmail.com>, f1zzye <kosenko2401@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.2"
black = "^25.1.0"
flake8 = "^7.3.0"
pillow = "^11.3.0"
python-decouple = "^3.8"
requests = "^2.32.4"
httpx = "^0.28.1"
pytoniq-core = "^0.1.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
